# firrtlizer

./: Cargo.toml  GRAMMAR  grammar.md
metagrammar/: Cargo.toml
metagrammar/src/: main.rs  metagrammar.lalrpop
parsing/: Cargo.toml  out.diff
parsing/src/: grammar.rs  lib.rs  lr0.rs  main.rs  test.rs
src/: ast.rs  lexer.rs  lib.rs  main.rs  parser.lalrpop  parser.rs  tests.rs  tokenizer.rs  typecheck.rs
src/ast/: methods.rs
src/parser/: expr.rs  mod.rs  statement.rs
tests/: statements.txt
tokenizer/: Cargo.toml
tokenizer/src/: lib.rs  main.rs
