[package]
name = "firrtlizer"
version = "0.1.0"
edition = "2021"
build = "build.rs" # LALRPOP preprocessing

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
lalrpop = "0.20.0"
lalrpop-util = "0.20.0"
log = "0.4.17"
nom = "7.1.3"
regex = "1.8.1"
